signIn API route created

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 mongopassword = 'mongodb+srv://kunchaaditya:aditya369@cluster-blogs.xcdxrg1.mongodb.net/tech-blogs?retryWrites=true&w=majority&appName=Cluster-blogs'
+jwt_secret_key = 'dragonforce'
